# journey

./: README.md  biome.json  index.html  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: app.tsx  bindings.ts  main.css  types.ts
src-tauri/: Cargo.toml  schema.sql  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/entity/: Cargo.toml
src-tauri/entity/src/: content_blob.rs  course.rs  course_section.rs  course_section_item.rs  lib.rs  module_content.rs  section_module.rs
src-tauri/icons/: icon.icns
src-tauri/migration/: Cargo.toml
src-tauri/migration/src/: lib.rs  m20250716_094625_create_tables.rs
src-tauri/migrations/: 20250412143131_create_course.sql  20250412145806_create_course_content.sql  20250701154154_create_course.sql  20250707080610_create_course.sql  20250710061713_create_course.sql  atlas.sum
src-tauri/src/: auth.rs  database.rs  entities.rs  main.rs  service_request.rs  sql_query.rs  sync.rs  sync_task.rs
src-tauri/src/request/: course.rs  courses.rs  mod.rs  rest.rs  service_request.rs  session.rs
src/components/: button.tsx  card.tsx  dialog.tsx  dropdown.tsx  input.tsx  link.tsx  loading.tsx  skeleton.tsx
src/components/auth/: user.tsx
src/components/layout/: global-layout.tsx  login-context.ts  module-context.ts  sidebar-context.ts  sidebar-icon.tsx  sidebar.tsx  window-controls.tsx
src/components/layout/course/: course-layout.tsx  course-sidebar.tsx  sidebar-item.tsx
src/components/layout/menu/: menu-layout.tsx  menu-sidebar.tsx  sidebar-item.tsx
src/hooks/: click-outside.ts  local-app-dir.ts  login-window.ts  useCommand.ts  useLocalAppDataDir.ts  useSessionStatus.ts  useUserCourses.ts  user.ts  version.ts
src/pages/: announcements.tsx  course.tsx  home.tsx  index.tsx
src/types/: react-pdf-js-infinite.d.ts
src/views/: announcements.tsx  course.tsx  index.tsx
