[package]
name = "journey"
version = "0.1.0"
description = "A Tauri App"
authors = ["cykreet"]
edition = "2021"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
specta = "2.0.0-rc.21"
specta-typescript = "0.0.9"
tauri-specta = { version = "2.0.0-rc.21", features = ["derive", "typescript"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite", "chrono"] }
tauri-plugin-store = "2"
tauri-plugin-http = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = "2.2.2"

