[package]
name = "journey"
version = "0.1.0"
description = "A Tauri App"
authors = ["cykreet"]
edition = "2024"
rust-version = "1.89.0"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[workspace]
members = [".", "entity", "migration"]

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
specta = "2.0.0-rc.21"
specta-typescript = "0.0.9"
tauri-specta = { version = "2.0.0-rc.21", features = ["derive", "typescript"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite", "chrono"] }
sea-orm = { version = "1.1.13", features = ["sqlx-sqlite", "macros"] }
migration = { path = "migration" }
entity = { path = "entity" }
tauri-plugin-store = "2"
tauri-plugin-http = "2"
select = "0.6.1"
tokio = { version = "1.47.0", features = ["full"] }
tauri-plugin-log = "2"
rand = "0.9.2"
base64 = "0.22.1"
serde_urlencoded = "0.7.1"
log = "0.4.27"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
futures = "0.3.31"

# [target.'cfg(debug_assertions)'.dependencies]
# tracing = "0.1.41"
# console-subscriber = "0.4.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = "2.2.2"
